--- a/app/views/layouts/_slideshow.html.erb
+++ b/app/views/layouts/_slideshow.html.erb
@@ -7,15 +7,15 @@
     <div class="carousel-item active">
       <img src="./assets/banner1.png" alt="Los Angeles" width="100%" height="auto">
       <div class="carousel-caption text-left text-warning mb-5">
-        <h3 class='hero-text'>Los Angeles</h3>
-        <p class='mb-5'>We had such a great time in LA!</p>
+        <h3 class='hero-text'>Mens Wear</h3>
+        <p class='mb-5'>Get the best exclusive menswear here!</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="./assets/banner2.png" alt="Chicago" width="100%" height="auto">
       <div class="carousel-caption text-right text-warning mb-5">
-        <h3 class="hero-text">Chicago</h3>
-        <p class="mb-5">Thank you, Chicago!</p>
+        <h3 class="hero-text">Womens Wear</h3>
+        <p class="mb-5">Get the best exclusive womenswear here!</p>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
   </a>
 </div>
 <style media="screen">
-  .hero-text{
+  .hero-text {
     font-size: 60px;
   }
 </style>
