--- a/app/views/layouts/_featured_row.html.erb
+++ b/app/views/layouts/_featured_row.html.erb
@@ -6,8 +6,8 @@
   <h1 class="text-center">Featured Collection</h1>
   <br/>
   <div class="container">
-    <div class="row justify-content-md-center">
-      <div class="col-md-3">
+    <div class="row justify-content-md-center justify-content-center">
+      <div class="col-md-3 col-7">
         <a href='<%= category_path(@category1) %>'>
           <img src='./assets/1.png' height="auto" width="100%" class="img collection-img" alt='Collection1'/>
         </a>
@@ -16,7 +16,7 @@
 
       <div class='col-md-1'></div>
 
-      <div class="col-md-3">
+      <div class="col-md-3 col-7">
         <a href='<%= category_path(@category2) %>'>
           <img src='./assets/2.png' height="auto" width="100%" class="img collection-img" alt='Collection2'/>
         </a>
@@ -25,8 +25,8 @@
 
       <div class='col-md-1'></div>
 
-      <div class="col-md-3">
-        <a href='<%= category_path(@category2) %>'>
+      <div class="col-md-3 col-7">
+        <a href='<%= category_path(@category3) %>'>
           <img src='./assets/3.png' height="auto" width="100%" class="img collection-img" alt='Collection3'/>
         </a>
         <h3 class="text-center"><%= @category3.name %></h3>
