--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,9 +20,12 @@
         <a class="nav-link" href="#">Kids</a>
       </li>
     </ul>
-    <div>
+    <div class="nav" style="position:absolute;right:0">
       <% if(current_user) %>
-        <%= link_to 'Logout',destroy_user_session_path,method: 'delete', class: 'nav-link mr-3' %>
+        <div class="nav-item" style="vertical-align: middle;line-height: 2.4;color: white;">
+          <a href="<%= cart_path(current_user.cart) %>"><%= fa_icon('shopping-cart') %></a>
+        </div>
+        <div class="nav-item"><%= link_to 'Logout',destroy_user_session_path,method: 'delete', class: 'nav-link mr-3' %></div>
       <% else %>
         <%= link_to 'Login', new_user_session_path, class: 'nav-link mr-3' %>
       <% end %>
